--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "vercel": "^36.0.0"
+  }
 }
