--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "author": "",
@@ -12,7 +11,6 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "vercel": "^36.0.0"
+    "express": "^4.19.2"
   }
 }
